# chioso

./: .gitignore  README.md  mosta  pyproject.toml
chioso/: __init__.py  inference.py  pp-ref.py  pp-spatial.py  train-chioso.py  train-predictor.py
chioso/data/: __init__.py  dataset.py  sgdata.py
chioso/modules/: __init__.py  adversal.py  annotator.py  attention.py  attention_layers.py  convnext.py  fpn.py  nn_layers.py  predictor.py  stem.py  transformer_predictor.py  vit.py
chioso/utils/: predict.py
configs/: cfg_chioso.py  cfg_predictor.py
paper2024/: README.md  area_fraction.ipynb  eval_predictor.ipynb  eval_synthetic.ipynb  syn_summerize.ipynb  visulization.ipynb
process/: cfg_chioso.py  cfg_gan.py  cfg_predictor.py  cfg_sc_annotation.py  inference.py  process_ref_data.py  process_sg_data.py  sc_annotation.py  train_chioso.py  train_gan.py  train_predictor.py  with_region_label.py
scripts/: cfg_predictor.py  train_predictor.py
