[tool.poetry]
name = "chioso"
version = "0.0.0"
description = "Tool for annotating HD spatial genomics data"
authors = ["Ji Yu <jyu@uchc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xtrain = { extras = ["cuda12"], version = "^0.3.3"}
pydensecrf = {git = "https://github.com/lucasb-eyer/pydensecrf.git"}
scikit-image = "^0.23.1"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
wandb = "^0.16.6"
tensorflow = "^2.16.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"
imagecodecs = "^2024.1.1"
seaborn = "^0.13.2"
tacco = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
